examples/readme_validation/syntax_cases/fail/fail_unclosed_multiline.dsl
@name: "语法负例-多行字符串未闭合"
[HTTP请求], 客户端: "default", 配置: '''
  method: GET
  url: http://example.com
